# CNNChess

./: CMakeLists.txt  README.md
cnn/: torch_eval.py
cnn/data/: data.py
engine/: CMakeLists.txt  driver.cpp  uci.cpp  uci.hpp
